--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -2,5 +2,9 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to Dr. Sillystringz's Factory Administrative Site</h1>
+<div class = "container">
+  <h1>Welcome to Dr. Sillystringz's Factory Administrative Site</h1>
+
+  <p>@Html.ActionLink("Manage Engineers", "Index", "Engineers")</p>
+</div>
 
