Add Create action, view and update link.

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 <div class = "container">
   <h1>Welcome to Dr. Sillystringz's Factory Administrative Site</h1>
 
-  <p>@Html.ActionLink("Manage Engineers", "Index", "Engineers")</p>
+  <p>@Html.ActionLink("Manage engineers", "Index", "Engineers")</p>
 </div>
 
