Add Edit action, view, and link update.

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -32,6 +32,7 @@
     </ul>
   }
 
+  <p>@Html.ActionLink("Edit engineer's information", "Edit", new { id = Model.EngineerId})</p>
   <p>@Html.ActionLink("Manage engineers", "Index")</p>
 
 </div>
