--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -8,9 +8,8 @@
 <div class = "container">
   <h2>Engineer Details</h2>
   <hr />
-  <h3>@Html.DisplayNameFor(model => model.FirstName): @Html.DisplayFor(model => model.FirstName)</h3>
-  <h3>@Html.DisplayNameFor(model => model.LastName): @Html.DisplayFor(model => model.LastName)</h3>
-  <h3>@Html.DisplayNameFor(model => model.HireDate): @Html.DisplayFor(model => model.HireDate)</h3>
+  <h3>Name: @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h3>
+  <h3>Hire Date (YYYY-MM-DD): @Html.DisplayFor(model => model.HireDate)</h3>
  
   @if(@Model.JoinEntities.Count == 0)
   {
@@ -33,6 +32,7 @@
   }
 
   <p>@Html.ActionLink("Edit engineer's information", "Edit", new { id = Model.EngineerId})</p>
+  <p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId})</p>
   <p>@Html.ActionLink("Manage engineers", "Index")</p>
 
 </div>
