Add AssignAMachine action, view, and update links.

--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -32,6 +32,7 @@
   }
 
   <p>@Html.ActionLink("Edit engineer's information", "Edit", new { id = Model.EngineerId})</p>
+  <p>@Html.ActionLink("Assign a machine", "AssignAMachine", new {id = Model.EngineerId})</p>
   <p>@Html.ActionLink("Delete engineer", "Delete", new { id = Model.EngineerId})</p>
   <p>@Html.ActionLink("Manage engineers", "Index")</p>
 
