Add Create action, view, and update link.

--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
   <hr />
 
   <p>@Html.ActionLink("Manage engineers", "Index", "Engineers")</p>
+  <p>@Html.ActionLink("Manage machines", "Index", "Machines")</p>
 </div>
 
