Add AssignAnEngineer action, view, and update links.

--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -28,7 +28,7 @@
         @using (Html.BeginForm("DeleteJoin", "Machines"))
         {
           @Html.Hidden("joinId", @join.EngineerMachineId)
-          <input typ = "submit" value = "Delete" class="btn btn-danger"  />
+          <input type = "submit" value = "Delete" class="btn btn-danger"  />
         }
       }
     </ul>
