--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -26,7 +26,7 @@
         @using (Html.BeginForm("DeleteJoin", "Engineers"))
         {
           @Html.Hidden("joinId", @join.EngineerMachineId)
-          <input type="submit" value="Delete"/>
+          <input type="submit" value="Delete" class="btn btn-danger"/>
         }
       }
     </ul>
