Add list of engineers and machines to home page.

--- a/Factory/Views/Engineers/AssignAMachine.cshtml
+++ b/Factory/Views/Engineers/AssignAMachine.cshtml
@@ -14,7 +14,7 @@
   {
     @Html.HiddenFor(model => model.EngineerId)
 
-    @Html.Label("Select Machine")
+    @Html.Label("Select Machine: ")
     @Html.DropDownList("MachineId")
 
     <input type = "submit" value = "Save" class="btn btn-success"/>
