--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -10,7 +10,7 @@
   <hr />
   <br>
   <h3>Name: @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h3>
-  <h3>Hire Date (YYYY-MM-DD): @Html.DisplayFor(model => model.HireDate)</h3>
+  <h3>Hire Date (yyy-mm-dd): @Html.DisplayFor(model => model.HireDate)</h3>
  
   @if(@Model.JoinEntities.Count == 0)
   {
