--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -2,10 +2,43 @@
   Layout = "_Layout";
 }
 
+@using Factory.Models;
+
 <div class = "container">
   <h1>Welcome to Dr. Sillystringz's Factory Administrative Site</h1>
   <hr />
   <br>
+  <h4>Engineers</h4>
+  @if (@Model["Engineers"].Length == 0)
+  {
+    <h3>No engineers have been added yet!</h3>
+  }
+  else
+  {
+    <ul>
+      @foreach(Engineer engineer in Model["Engineers"])
+      {
+        <li>@Html.ActionLink($"{engineer.FirstName} {engineer.LastName}", "Details", "Engineers", new {id = @engineer.EngineerId})</li>
+      }
+    </ul>
+  }
+
+  <h4>Machines</h4>
+  @if (Model["Machines"].Length == 0)
+  {
+    <p>No machines have been added yet!</p>
+  }
+  else
+  {     
+    <ul>
+      @foreach (Machine machine in Model["Machines"])
+      {
+        <li>@Html.ActionLink(@machine.MachineName, "Details", "Machines", new {id = @machine.MachineId})</li>
+      }
+    </ul>
+  }
+  <br>
+
   <p>@Html.ActionLink("Manage engineers", "Index", "Engineers")</p>
   <p>@Html.ActionLink("Manage machines", "Index", "Machines")</p>
 </div>
