--- a/Factory/Views/Machines/AssignAnEngineer.cshtml
+++ b/Factory/Views/Machines/AssignAnEngineer.cshtml
@@ -14,7 +14,7 @@
   {
     @Html.HiddenFor(model => model.MachineId)
 
-    @Html.Label("Select Engineer")
+    @Html.Label("Select Engineer by last name: ")
     @Html.DropDownList("EngineerId")
 
     <input type = "submit" value = "Save" class = "btn btn-primary" />
