Add styles.css file and styling.

--- a/Factory/Views/Engineers/Create.cshtml
+++ b/Factory/Views/Engineers/Create.cshtml
@@ -12,7 +12,7 @@
   <p>@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger", @style = "font-weight: 600"})</p>
   <P>@Html.ValidationMessageFor(model => model.HireDate, "", new { @class = "text-danger", @style = "font-weight: 600"})</P>
 
-  <p id="NoEngineerMessage">@TempData["NoEngineerMessage"]</p>
+  <p class="text-danger">@TempData["NoEngineerMessage"]</p>
 
   @using (Html.BeginForm())
   {
