--- a/Factory/Views/Engineers/Delete.cshtml
+++ b/Factory/Views/Engineers/Delete.cshtml
@@ -5,19 +5,17 @@
 @model Factory.Models.Engineer
 
 <div class="container">
-  <h2>Delete</h2>
+  <h1 class="text-danger"><strong>Delete</strong></h1>
   <hr />
   <br>
-  <h2>Are you sure you want to delete this engineer from the system?</h2>
+  <h2 class="text-danger">Are you sure you want to delete this engineer from the system?</h2>
 
-  <p id = "deleteEngineer"> Engineer: @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </p> 
+  <p class="text-danger"><strong>Engineer:</strong> @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName) </p> 
 
   @using (Html.BeginForm())
   {
     <input type = "submit" value = "Delete" class="btn btn-danger" />
   }
-
   <br>
-
   @Html.ActionLink("Manage engineers", "Index")
 </div>
