--- a/Factory/Views/Engineers/Index.cshtml
+++ b/Factory/Views/Engineers/Index.cshtml
@@ -10,7 +10,7 @@
   <br>
   @if (@Model.Count == 0)
   {
-    <h3>There are no engineers in the system!"</h3>
+    <h3 class = "text-info">There are no engineers in the system!</h3>
   }
   else
   {
@@ -21,7 +21,7 @@
       }
     </ul>
   }
-
-<p>@Html.ActionLink("Add a new Engineer", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+  <br>
+  <p>@Html.ActionLink("Add a new Engineer", "Create")</p>
+  <p>@Html.ActionLink("Home", "Index", "Home")</p>
 </div>
