--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -10,7 +10,7 @@
   <br>
   @if (@Model.Count == 0)
   {
-    <h3>No machines have added yet!</h3>
+    <h3 class= "text-info">No machines have been added yet!</h3>
   }
   else
   {
